--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,28 @@ dist
 __pycache__
 # Unit test / coverage reports
 .coverage
+
+
+# Frontend
+
+# dependencies
+frontend/node_modules
+frontend/.pnp
+.pnp.js
+
+# testing
+frontend/coverage
+
+# production
+frontend/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
