--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ python = "^3.7"
 attrs = "^20.2.0"
 requests = "^2.24.0"
 SQLAlchemy = "^1.3.20"
+uvicorn = "^0.12.2"
+fastapi = "^0.61.2"
+FastAPI-SQLAlchemy = "^0.2.1"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.790"
